--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,14 @@
     "ApiKey": "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"
   },
 
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "sha880067@gmail.com",
+    "SenderPassword": "sonxrukfhdrtjaen",
+    "SenderName": "Project Management"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
